Fixed header on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,19 +21,16 @@ body {
     min-height: 100vh;
     font-family: 'Lato', sans-serif;
 }
-.header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 .title {
     font-size: 3em;
     color: var(--grey4);
+    display: inline;
 }
 
 .title-img {
     width: 50px;
     margin-left: 10px;
+    display: inline;
 }
 
 @media (max-width:650px) {
